[package]
name = "gst-depth-meta"
version = "2.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>"]
description = "Rust bindings to gstreamer-depth-meta"
license = "MIT"
edition = "2018"

[dependencies]
glib-sys = "0.15.1"
gst = { package = "gstreamer", version = "0.18" }
gst-sys = { package = "gstreamer-sys", version = "0.18" }
gst-video = { package = "gstreamer-video", version = "0.18" }
gst-video-sys = { package = "gstreamer-video-sys", version = "0.18" }
gst-base = { package = "gstreamer-base", version = "0.18" }
capnp = "0.14.0"
byte-slice-cast = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1"
cfg-expr = "0.15.4"

[build-dependencies]
pkg-config = "0.3.19"
capnpc = "0.14.2"

[dev-dependencies]
rand = "0.8.2"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
