[package]
name = "gst-rgbd-src"
version = "0.0.0"
authors = ["Niclas Overby <niclas.overby@aivero.com>", "Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Jimmi Christensen <jimmi.christensen@aivero.com>"]
license = "MIT"
description = "GStreamer plugin containing `video/rgbd` sources for RealSense and Azure Kinect DK (K4A) devices"
keywords = [
    "Azure Kinect",
    "GStreamer",
    "K4A",
    "Realsense",
    "Rust",
    "Source",
]
repository = "https://gitlab.com/aivero/open-source/contrib"
edition = "2018"
readme = "README.md"
build = "build.rs"

[features]
default = [ "libk4a", "librealsense2" ]

[dependencies]
capnp = "0.14.0"
gobject-sys = "0.10"
gst = { package = "gstreamer", version = "0.18" }
gst-base = { package = "gstreamer-base", version = "0.18" }
gst-video = { package = "gstreamer-video", version = "0.18" }
serde = "1.0.125"
serde_json = "1.0.64"
once_cell = "1"

libk4a = { path = "../libk4a-rs", optional = true }
gst-depth-meta = { path = "../gst-depth-meta-rs" }
librealsense2 = { path = "../librealsense-rs", optional = true }
gst-util = { path = "../gst-util" }

[build-dependencies]
capnpc = "0.14.2"
gst-plugin-version-helper = "0.7.1"

[lib]
name = "gstrgbdsrc"
crate-type = ["cdylib"]
path = "src/lib.rs"
