[package]
name = "gst-rgbd"
version = "0.0.0" # Overwritten during conan create.
authors = ["Andrej Orsula <andrej.orsula@aivero.com>", "Tobias Morell <tobias.morell@aivero.com>", "Niclas Overby <niclas.overby@aivero.com"]
license = "LGPL"
description = "GStreamer plugin for demuxing and muxing `video/rgbd` streams"
keywords = ["RGB-D", "Demux", "Mux", "GStreamer", "Rust"]
repository = "https://github.com/aivero/contrib"
edition = "2018"
readme = "README.md"
build = "build.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.18" }
gst-base = { package = "gstreamer-base", version = "0.18", features = ["v1_18"] }
lazy_static = "1.4.0"
once_cell = "1"

gst-depth-meta = { path = "../gst-depth-meta-rs" }
gst-util = { path = "../gst-util" }

[build-dependencies]
gst-plugin-version-helper = "0.7.1"

[lib]
name = "gstrgbd"
crate-type = ["cdylib"]
path = "src/lib.rs"
