[package]
name = "gst-util"
version = "0.0.0" # Overwritten during conan create.
authors = ["Jimmi Christensen <jimmi.christensen@aivero.com>"]
license = "MIT"
description = "Utility library for making it a bit easier to work with gstreamer from rust"
keywords = ["GStreamer", "Rust"]
repository = "https://gitlab.com/aivero/open-source/contrib"
edition = "2018"
readme = "README.md"

[dependencies]
gst = { package = "gstreamer", version = "0.18" }
gst_sdp = { package = "gstreamer-sdp", version = "0.18" }

[build-dependencies]
gst-plugin-version-helper = "0.2.0"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
